[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask[async]>=3.1.0",
    "pycryptodome>=3.21.0",
    "qiskit-aer>=0.16.1",
    "qiskit>=1.3.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "openai>=1.61.1",
    "anthropic>=0.45.2",
    "twilio>=9.4.4",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "hypercorn>=0.17.3",
    "asgiref>=3.8.1",
    "trafilatura>=2.0.0",
    "kivy>=2.3.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]
